# wasm-perf

./: Cargo.toml  README.md  build.sh  dev.sh
benches/: bench.rs
sites/: b64_bench.js  base64js.min.js  index.html  worker.js
sites/pkg/: b64_bench.d.ts  b64_bench.js  b64_bench_bg.js  b64_bench_bg.wasm  b64_bench_bg.wasm.d.ts
sites/pkg/snippets/wasm-bindgen-rayon-61c530a5c67cc8eb/src/: workerHelpers.no-bundler.js
src/: lib.rs  main.rs
