[package]
name = "b64-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.21.2"
rand = "0.8.5"
wasm-bindgen = "0.2.87"

[[bench]]
name="bench"
harness=false

[dev-dependencies]
criterion = "0.5.1"

[dependencies.getrandom]
version="0.2"
features=["js"]