[package]
name = "b64-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.21.2"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.66"
log = "0.4.20"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.39"
wasm_thread = "0.2.0"
web-sys = { version = "0.3.66", features = ["Navigator", "Window"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
